or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public
License for more details.
.
You should have received a copy of the GNU Lesser General Public License
along with the GNU MP Library; see the file COPYING.LIB.  If not, write to
the Free Software Foundation, Inc., 59 Temple Place - Suite 330, Boston,
MA 02111-1307, USA.


2002-02-16  Torbjorn Granlund  <tege@swox.com>

	* mpn/generic/get_str.c (mpn_sb_get_str): Round frac upwards after
	umul_ppmm calls.

2002-02-16  Kevin Ryde  <kevin@swox.se>

	* config.guess (alpha-*-*): Do alpha exact cpu probes on any system,
	and only if configfsf.guess gives a plain "alpha".

	* acinclude.m4 (GMP_PROG_CC_WORKS): Detect a gcc 3.0.3 powerpc64
	linker invocation problem.

2002-02-15  Torbjorn Granlund  <tege@swox.com>

	* mpn/generic/get_str.c (mpn_sb_get_str): For base 10, develop initial
	digits using umul_ppmm, then switch to plain multiplication.

	* config.guess: Rewrite Alpha subtype detection code for *bsd systems.

2002-02-15  Kevin Ryde  <kevin@swox.se>

	* gmp.texi (Build Options): Note powerpc exact cpu types.
	(Debugging): Advertise DEBUG in memory.c.

	* config.sub, config.guess: Add some powerpc exact cpus.
	* configure.in: Add configs for them.

	* memory.c [__NeXT__]: Remove unused #define of "static".
	(__gmp_default_allocate, __gmp_default_reallocate): Print size if
	allocation fails, don't use perror.

	* gmp-h.in: g++ 3 demands __GMP_NOTHROW is before other attributes.

2002-02-14  Torbjorn Granlund  <tege@swox.com>

	* mpn/alpha/mul_1.asm: Fix typo preventing build on T3E systems.

2002-02-14  Kevin Ryde  <kevin@swox.se>

	* tune/tuneup.c (tune_set_str): Increase max_size, for the benefit of
	alpha.

	* macos/README: Bug reports to bug-gmp@gnu.org, clarify MacOS X a bit.

	* mpn/generic/gcdext.c [WANT_GCDEXT_ONE_STEP]: Add missing TMP_FREE.

	* tune/speed.c, tune/tuneup.c: Allow for speed_cycletime of 0.0 in
	some diagnostic printouts.
	* tune/time.c (speed_cycletime): Note can be 0.0.
