@@ -19,6 +19,10 @@ the Free Software Foundation, Inc., 59 Temple Place - Suite 330, Boston,
 MA 02111-1307, USA.
 
 
+2002-02-17  Torbjorn Granlund  <tege@swox.com>
+
+	* mpn/mips2/gmp-mparam.h: New file.
+
 2002-02-16  Torbjorn Granlund  <tege@swox.com>
 
 	* mpn/generic/get_str.c (mpn_sb_get_str): Round frac upwards after
